RESOLVED FIXED151226
ContextMenuAction and WebMenuItemTag shouldn't have to be in sync
https://bugs.webkit.org/show_bug.cgi?id=151226
Summary ContextMenuAction and WebMenuItemTag shouldn't have to be in sync
Anders Carlsson
Reported 2015-11-12 15:15:12 PST
ContextMenuAction and WebMenuItemTag shouldn't need to be in sync
Attachments
Patch (25.94 KB, patch)
2015-11-12 15:25 PST, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2015-11-12 15:25:42 PST
Anders Carlsson
Comment 2 2015-11-12 15:55:47 PST
Note You need to log in before you can comment on or make changes to this bug.