ContextMenuAction and WebMenuItemTag shouldn't have to be in sync https://bugs.webkit.org/show_bug.cgi?id=151226

Reviewed by Tim Horton.

Source/WebCore:

* page/ContextMenuController.cpp:
* platform/ContextMenuItem.h:
Remove now unneeded comments. Also, remove ContextMenuItemTagOpenLinkInThisWindow since it wasn't used by any of our remaining ports.

Source/WebKit/mac:

* WebView/WebHTMLView.mm:
(toAction):
(toTag):
Add conversion functions.

(-[WebMenuTarget forwardContextMenuAction:]):
Use toAction.

(createMenuItem):
Use toTag.

(setMenuItemTarget): Deleted.
(setMenuTargets): Deleted.
(-[WebHTMLView menuForEvent:]):
Don't call setMenuTargets, that's already done when we create the menu items.

* WebView/WebUIDelegatePrivate.h:
Add missing menu item tags. This does break ABI, but the menu item tags were already out of sync
so it's very likely that nobody is relying on this.

Source/WebKit2:

* Shared/API/c/WKSharedAPICast.h:
(WebKit::toAPI):
(WebKit::toImpl):
Remove ContextMenuItemTagOpenLinkInThisWindow.

Canonical link: https://commits.webkit.org/169411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192393 268f45cc-cd09-0410-ab3c-d52691b4dbfc